Building Classification Report

--- a/Machine Learning/Classification in ML.ipynb
+++ b/Machine Learning/Classification in ML.ipynb
@@ -3102,17 +3102,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bc86be-1c7a-479c-aebc-92a1e3b7e5fc",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9fc6bb4a-f843-4527-9668-57ddb05950a9",
    "metadata": {},
    "source": [
+    "---\n",
     "Let's check the Confusion Matrix and Classification Report on Test Data"
    ]
   },
@@ -3222,9 +3215,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01d7f45d-685f-4e7d-b624-ff152dc0aa0e",
+   "metadata": {},
+   "source": [
+    "##### AUC ROC CURVE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddca7b6b-e352-4c0e-9f2e-52b4fcf90f88",
+   "id": "8c54c8ed-be86-4af8-94b0-586bb0e355cf",
    "metadata": {},
    "outputs": [],
    "source": []
