learned AUC-ROC Curve

--- a/Machine Learning/Classification in ML.ipynb
+++ b/Machine Learning/Classification in ML.ipynb
@@ -3474,7 +3474,9 @@
    "cell_type": "code",
    "execution_count": 160,
    "id": "dfb8b9dd-f5fb-4b8b-b936-0025bba6f285",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3739,7 +3741,9 @@
    "cell_type": "code",
    "execution_count": 172,
    "id": "a5ba6c36-3909-41ab-8e9c-0ca984c29478",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
