learning Decision Tree

--- a/Machine Learning/Classification in ML.ipynb
+++ b/Machine Learning/Classification in ML.ipynb
@@ -3939,10 +3939,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "0c00d0d6-bde6-4505-b437-c4db9d0450ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# get dummies from df1 as we have changed the datatype of cat to objects in df1\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m data_encoded \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mget_dummies(df1, columns \u001b[38;5;241m=\u001b[39m cat, drop_first \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# get dummies from df1 as we have changed the datatype of cat to objects in df1\n",
     "data_encoded = pd.get_dummies(df1, columns = cat, drop_first = False)"
