learn(smoting & Multinomial NB)

--- a/Machine Learning/Naive Bayes/Naive_Bayes_textual_data.ipynb
+++ b/Machine Learning/Naive Bayes/Naive_Bayes_textual_data.ipynb
@@ -2459,9 +2459,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9174580f-541a-4792-8ebe-c1c6b84dea74",
+   "metadata": {},
+   "source": [
+    "## Gaussian Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "5f330615-a383-429f-93c3-95cdbb84adea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5a869124-c050-46ea-bd22-c341c443b3e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GaussianNB()\n",
+    "\n",
+    "model.fit(x_train_bal.toarray(), y_train_bal)\n",
+    "\n",
+    "y_pred = model.predict(x_test.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f57a174a-c23f-4be6-8a37-d9c66e2aea9f",
+   "metadata": {},
+   "source": [
+    "#### Why are we using  toarray() here ?\n",
+    "\n",
+    "The `toarray()` method is used in your code because the `x_train_bal` and `x_test` variables likely represent sparse matrices, and the Gaussian Naive Bayes model expects dense NumPy arrays as input.\n",
+    "\n",
+    "Here's a breakdown:\n",
+    "\n",
+    "* **Sparse Matrices:**\n",
+    "    * In many machine learning tasks, especially those involving text data (like using TF-IDF or CountVectorizer), the feature matrices can be very large but contain mostly zero values. These are called sparse matrices.\n",
+    "    * Sparse matrices are stored in a way that efficiently represents only the non-zero values, saving memory and computation time.\n",
+    "    * Common sparse matrix formats include CSR (Compressed Sparse Row) and CSC (Compressed Sparse Column).\n",
+    "* **Gaussian Naive Bayes and Dense Arrays:**\n",
+    "    * The Gaussian Naive Bayes implementation in scikit-learn is designed to work with dense NumPy arrays.\n",
+    "    * It calculates the mean and standard deviation of each feature, which is more efficient when the data is stored in a dense format.\n",
+    "* **`toarray()` Conversion:**\n",
+    "    * The `toarray()` method converts a sparse matrix into a dense NumPy array.\n",
+    "    * By calling `x_train_bal.toarray()` and `x_test.toarray()`, you are transforming the sparse matrices into the dense format that Gaussian Naive Bayes expects.\n",
+    "\n",
+    "**Why this is important:**\n",
+    "\n",
+    "* **Compatibility:**\n",
+    "    * Without the `toarray()` conversion, the Gaussian Naive Bayes model would likely raise an error because it wouldn't be able to process the sparse matrix format.\n",
+    "* **Correct Calculations:**\n",
+    "    * The underlying calculations of the Gaussian Naive Bayes algorithm are designed to work with dense arrays. Converting the sparse matrix ensures that the calculations are performed correctly.\n",
+    "* **Memory Considerations:**\n",
+    "    * It is very important to be aware that converting very large sparse matrices to dense arrays can consume a very large amount of memory. If your sparse matrix is extremely large, converting it to a dense array could cause your program to run out of memory. In those cases, it may be better to consider algorithms that can handle sparse matrices directly, or to use dimensionality reduction techniques.\n",
+    "\n",
+    "In summary, `toarray()` is used to bridge the gap between the sparse matrix representation of your data and the dense array format required by the Gaussian Naive Bayes algorithm.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "9871b93e-0a1f-490b-a2eb-746c057918ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.87      0.92      1107\n",
+      "           1       0.54      0.87      0.66       186\n",
+      "\n",
+      "    accuracy                           0.87      1293\n",
+      "   macro avg       0.76      0.87      0.79      1293\n",
+      "weighted avg       0.91      0.87      0.88      1293\n",
+      " 0.6625514403292181\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred), f1_score(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98bdad46-4134-4cd7-839c-175cd9a71547",
+   "id": "108b62ea-f23f-40c2-a50a-c02dd5c27ee4",
    "metadata": {},
    "outputs": [],
    "source": []
