--- a/Gen AI/image_edge_detection.ipynb
+++ b/Gen AI/image_edge_detection.ipynb
@@ -36,7 +36,7 @@
     "    image = cv2.imread(path_to_image)\n",
     "    return image\n",
     "\n",
-    "# Show the image\n",
+    "# Show the imagek\n",
     "def show_image(image):\n",
     "    plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
     "    plt.show()\n",
