--- a/Unsupervised Learning/Clustering.ipynb
+++ b/Unsupervised Learning/Clustering.ipynb
@@ -1989,17 +1989,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "f6d6a257-b7fd-4da5-9580-338c4a3ff973",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['KM']"
+    "data['KM_3_Clus'] = KM_3.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 157,
    "id": "ac1283f0-66aa-45ef-8521-6487e8e414b8",
    "metadata": {},
    "outputs": [
@@ -2030,6 +2030,7 @@
        "      <th>Fibre</th>\n",
        "      <th>H_Clus</th>\n",
        "      <th>DB_Clus</th>\n",
+       "      <th>KM_3_Clus</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2041,6 +2042,7 @@
        "      <td>1.702960</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2049,6 +2051,7 @@
        "      <td>0.350088</td>\n",
        "      <td>0.658249</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2059,6 +2062,7 @@
        "      <td>1.984562</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2067,6 +2071,7 @@
        "      <td>0.270925</td>\n",
        "      <td>0.369266</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2077,83 +2082,299 @@
        "      <td>0.557309</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.267150</td>\n",
-       "      <td>0.234292</td>\n",
-       "      <td>0.546766</td>\n",
-       "      <td>0.386447</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.351557</td>\n",
-       "      <td>0.677176</td>\n",
-       "      <td>0.551181</td>\n",
-       "      <td>1.102799</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.635325</td>\n",
-       "      <td>1.223652</td>\n",
-       "      <td>0.330483</td>\n",
-       "      <td>0.675459</td>\n",
+       "      <th>1741</th>\n",
+       "      <td>1.188371</td>\n",
+       "      <td>1.963861</td>\n",
+       "      <td>1.144457</td>\n",
+       "      <td>1.438795</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.527588</td>\n",
-       "      <td>1.250053</td>\n",
-       "      <td>1.247867</td>\n",
-       "      <td>0.889896</td>\n",
+       "      <th>1742</th>\n",
+       "      <td>2.325762</td>\n",
+       "      <td>1.970995</td>\n",
+       "      <td>1.352002</td>\n",
+       "      <td>0.051109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1743</th>\n",
+       "      <td>0.597130</td>\n",
+       "      <td>0.727934</td>\n",
+       "      <td>1.031587</td>\n",
+       "      <td>0.255496</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.598690</td>\n",
-       "      <td>0.068307</td>\n",
-       "      <td>1.423195</td>\n",
-       "      <td>0.339158</td>\n",
+       "      <th>1744</th>\n",
+       "      <td>0.748026</td>\n",
+       "      <td>1.722406</td>\n",
+       "      <td>1.319929</td>\n",
+       "      <td>0.920391</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1745</th>\n",
+       "      <td>2.013799</td>\n",
+       "      <td>0.576179</td>\n",
+       "      <td>0.515998</td>\n",
+       "      <td>1.536694</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1746 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Protein       Fat  vitaminC     Fibre  H_Clus  DB_Clus\n",
-       "0  0.452369  1.170926  1.079271  1.702960       1        0\n",
-       "1  2.321087  0.706856  0.350088  0.658249       1        0\n",
-       "2  0.884554  1.186571  2.428544  1.984562       2        1\n",
-       "3  0.715501  0.577599  0.270925  0.369266       1        0\n",
-       "4  0.132610  0.544521  0.116884  0.557309       1        0\n",
-       "5  1.267150  0.234292  0.546766  0.386447       1        0\n",
-       "6  0.351557  0.677176  0.551181  1.102799       1        0\n",
-       "7  0.635325  1.223652  0.330483  0.675459       3        2\n",
-       "8  0.527588  1.250053  1.247867  0.889896       1        0\n",
-       "9  0.598690  0.068307  1.423195  0.339158       1        0"
+       "       Protein       Fat  vitaminC     Fibre  H_Clus  DB_Clus  KM_3_Clus\n",
+       "0     0.452369  1.170926  1.079271  1.702960       1        0          0\n",
+       "1     2.321087  0.706856  0.350088  0.658249       1        0          0\n",
+       "2     0.884554  1.186571  2.428544  1.984562       2        1          2\n",
+       "3     0.715501  0.577599  0.270925  0.369266       1        0          0\n",
+       "4     0.132610  0.544521  0.116884  0.557309       1        0          0\n",
+       "...        ...       ...       ...       ...     ...      ...        ...\n",
+       "1741  1.188371  1.963861  1.144457  1.438795       3        2          1\n",
+       "1742  2.325762  1.970995  1.352002  0.051109       3        2          1\n",
+       "1743  0.597130  0.727934  1.031587  0.255496       1        0          0\n",
+       "1744  0.748026  1.722406  1.319929  0.920391       1        0          0\n",
+       "1745  2.013799  0.576179  0.515998  1.536694       3        2          1\n",
+       "\n",
+       "[1746 rows x 7 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(10)"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "8daff565-a982-4ee5-b694-2a66c3c6b182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import silhouette_samples, silhouette_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "2a15f2d1-e1ec-4601-93b1-0d5d914f60ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HC_sil_width = silhouette_samples(data, clusters_maxclust)  # HC - Hierarchial_CLustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "6e062558-03cd-4026-bebb-acc8effde97b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.50485828, 0.44522822, 0.46380576, ..., 0.68087028, 0.49453644,\n",
+       "       0.39005357])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HC_sil_width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "df58c151-bfd9-42ad-879e-d31f0368fb21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5258996753986472"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HC_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "58a57076-b2fe-4c85-9492-d0b3bae2e4ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5682722843879978"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KM3_sil_width = silhouette_samples(data, KM_3.labels_)\n",
+    "KM3_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "a3a2d609-aeac-497d-ad39-f26bc8fa58fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34069529751670374"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KM5_sil_width = silhouette_samples(data, KM_5.labels_)\n",
+    "KM5_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "fa445cb5-8348-43f3-8423-284c5e7f739f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22988055488632722"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KM11_sil_width = silhouette_samples(data, KM_11.labels_)\n",
+    "KM11_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "4a84e0cf-ebe9-46c9-bcfe-7a28143a59cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5171215461048901"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB_sil_width = silhouette_samples(data, DB_CLus)\n",
+    "DB_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "59a4b778-42cd-47ed-a362-fe19ccda6573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5682722843879978"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB = DBSCAN(min_samples=5, eps=1.6)\n",
+    "DB_CLus = DB.fit_predict(data)\n",
+    "DB_sil_width = silhouette_samples(data, DB_CLus)\n",
+    "DB_sil_width.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "2a49653b-6fba-4d36-aaa7-9c4510638eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KM3_sil_width.mean() == DB_sil_width.mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a15f2d1-e1ec-4601-93b1-0d5d914f60ba",
+   "id": "98470bdd-1aaa-439f-988d-9b8c93f7191a",
    "metadata": {},
    "outputs": [],
    "source": []
