end sem projects and SVM, Imbalanced Data

--- a/Unsupervised Learning/Clustering.ipynb
+++ b/Unsupervised Learning/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "1c207b56-3a2c-4e21-85d1-190a9fa1d6a7",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "0d20a4a0-ea8b-47de-8926-a89ba2e598d2",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "b65072ed-2a23-48c5-8a28-70b49796b8c9",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4               Alcoholic beverage, daiquiri, canned  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,12 +2372,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82db1d7e-48af-47aa-b643-9bd6811a9dd1",
+   "metadata": {},
+   "source": [
+    "### Support Vector"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98470bdd-1aaa-439f-988d-9b8c93f7191a",
+   "execution_count": 3,
+   "id": "684ba09e-7ba0-4fe6-a5b7-d90a2d604d78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "187f2f3e-ecee-4eb8-b048-d41291b88ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM = SVC(kernel='rbf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77cd1e35-7782-4776-aff1-52abbd5227bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM.fit(X_trai)"
+   ]
   }
  ],
  "metadata": {
